<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>900</width>
    <height>521</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
    <horstretch>1</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>900</width>
    <height>521</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>900</width>
    <height>521</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Directorios</string>
  </property>
  <property name="layoutDirection">
   <enum>Qt::LeftToRight</enum>
  </property>
  <widget class="QListWidget" name="Explorer1">
   <property name="geometry">
    <rect>
     <x>100</x>
     <y>40</y>
     <width>256</width>
     <height>361</height>
    </rect>
   </property>
  </widget>
  <widget class="QListWidget" name="Explorer2">
   <property name="geometry">
    <rect>
     <x>550</x>
     <y>40</y>
     <width>260</width>
     <height>361</height>
    </rect>
   </property>
  </widget>
  <widget class="QPushButton" name="NDir1">
   <property name="geometry">
    <rect>
     <x>211</x>
     <y>410</y>
     <width>50</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="icon">
    <iconset>
     <normaloff>newFolder.ico</normaloff>newFolder.ico</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
  </widget>
  <widget class="QPushButton" name="Delete1">
   <property name="geometry">
    <rect>
     <x>290</x>
     <y>410</y>
     <width>50</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="icon">
    <iconset>
     <normaloff>trash.ico</normaloff>trash.ico</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
  </widget>
  <widget class="QPushButton" name="NDir2">
   <property name="geometry">
    <rect>
     <x>651</x>
     <y>410</y>
     <width>50</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="icon">
    <iconset>
     <normaloff>newFolder.ico</normaloff>newFolder.ico</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
  </widget>
  <widget class="QPushButton" name="DFile1">
   <property name="geometry">
    <rect>
     <x>570</x>
     <y>410</y>
     <width>50</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="icon">
    <iconset>
     <normaloff>newFile.ico</normaloff>newFile.ico</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
  </widget>
  <widget class="QPushButton" name="Delete2">
   <property name="geometry">
    <rect>
     <x>740</x>
     <y>410</y>
     <width>50</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="icon">
    <iconset>
     <normaloff>trash.ico</normaloff>trash.ico</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
  </widget>
  <widget class="QPushButton" name="Of1To2">
   <property name="geometry">
    <rect>
     <x>400</x>
     <y>160</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>-----&gt;</string>
   </property>
  </widget>
  <widget class="QPushButton" name="Of2To1">
   <property name="geometry">
    <rect>
     <x>400</x>
     <y>220</y>
     <width>91</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>&lt;-----</string>
   </property>
  </widget>
  <widget class="QPushButton" name="NFile1">
   <property name="geometry">
    <rect>
     <x>130</x>
     <y>410</y>
     <width>50</width>
     <height>50</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="icon">
    <iconset>
     <normaloff>newFile.ico</normaloff>newFile.ico</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>20</width>
     <height>20</height>
    </size>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
